regras responsivas melhoradas

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="DinDin é um website intitucional proposto pela Gama Academy em forma de desafio frontend "
+      content="DinDin é um website institucional proposto pela Gama Academy em forma de desafio frontend "
     />
     <link
       rel="shortcut icon"
