--- a/blog.html
+++ b/blog.html
@@ -27,12 +27,12 @@
 </head>
 <body>
     <!-- ====== Header ====== -->
-    <header>
+    <header role="banner">
       <div id="header">
         <a href="./index.html">
           <img src="./images/logo-header.png" alt="Logo do site DinDin" />
         </a>
-        <nav>
+        <nav role="navigation">
           <ul id="nav">
             <li><a class="menu-item-link" href="./cursos.html">cursos</a></li>
             <li><a class="menu-item-link" href="./blog.html">blog</a></li>
@@ -105,9 +105,7 @@
    <!-- ====== Footer ======-->
    <footer>
     <div id="footer">
-      <div id="logo_footer">
-        <img src="./images/logo-footer.png" alt="Logo dindin" />
-      </div>
+      <img src="./images/logo-footer.png" alt="Logo dindin" />
       <div id="nav_footer">
         <li><a href="./cursos.html">cursos</a></li>
         <li><a href="./blog.html">blog</a></li>
