--- a/cursos.html
+++ b/cursos.html
@@ -28,12 +28,12 @@
   </head>
   <body>
     <!-- ====== Header ====== -->
-    <header>
+    <header role="banner">
       <div id="header">
         <a href="./index.html">
           <img src="./images/logo-header.png" alt="Logo do site DinDin" />
         </a>
-        <nav>
+        <nav role="navigation">
           <ul id="nav">
             <li><a class="menu-item-link" href="./cursos.html">cursos</a></li>
             <li><a class="menu-item-link" href="./blog.html">blog</a></li>
@@ -106,12 +106,10 @@
         </div>
       </section>
     </main>
-    <!-- ====== Footer ======-->
+    <!-- ======= Footer ======-->
     <footer>
       <div id="footer">
-        <div id="logo_footer">
-          <img src="./images/logo-footer.png" alt="Logo dindin" />
-        </div>
+        <img src="./images/logo-footer.png" alt="Logo dindin" />
         <div id="nav_footer">
           <li><a href="./cursos.html">cursos</a></li>
           <li><a href="./blog.html">blog</a></li>
