alteraçoes de tags meta

--- a/index.html
+++ b/index.html
@@ -17,14 +17,12 @@
       name="author"
       content="Leonardo David , Julia Alberton, Felipe Pena"
     />
-    <meta name="description" content="lisca de compras funcional" />
     <meta
       name="keywords"
       content="Desafio,curso, intensivo, Gama Academy, html, css"
     />
-    <!-- ====== Styles Global ======-->
+    <!-- ====== Styles  ======-->
     <link rel="stylesheet" href="./styles/index.css" />
-    <!-- ====== Styles Responsive ======-->
     <title>DinDin</title>
   </head>
   <body>
